# Generated by Django 5.1.2 on 2024-10-11 01:46

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('estado', '0001_initial'),
        ('mesa', '0001_initial'),
        ('producto', '0001_initial'),
        ('ticket', '0001_initial'),
        ('tipoDePedido', '0001_initial'),
    ]

    operations = [
        migrations.CreateModel(
            name='Comanda',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('cantidad', models.IntegerField()),
                ('fecha', models.DateTimeField()),
                ('id_estado', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='estado.estado')),
                ('id_mesa', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='mesa.mesa')),
                ('id_producto', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='producto.producto')),
                ('id_ticket', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='ticket.ticket')),
                ('id_tipo_de_pedido', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='tipoDePedido.tipodepedido')),
            ],
        ),
    ]
