# Generated by Django 5.1.2 on 2024-10-11 01:46

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('pago', '0001_initial'),
        ('ticket', '0001_initial'),
    ]

    operations = [
        migrations.CreateModel(
            name='Factura',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('id_ticket', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='ticket.ticket')),
                ('pago', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='pago.pago')),
            ],
        ),
    ]
